# yotta

./: .clang-format  .gitignore  Dockerfile  README.md  TODO.md  upgrade_yotta.sh  yotta.unit
src/: CMakeLists.txt  args.h  test.py  yotta.cpp
src/core/: CMakeLists.txt  yta_event_loop.c  yta_event_loop.h  yta_process.c  yta_process.h
src/core/test/: CMakeLists.txt  core_test.cpp
src/http/: CMakeLists.txt  yta_http.cpp  yta_http.hpp
src/http/test/: CMakeLists.txt  http_test.cpp
src/picohttpparser/: picohttpparser.c
src/test/: README.md  integration_test.py  noending  run_integration_test.sh  run_upgrade_test.sh
src/test/subdir/: index.html
